--- a/home.html
+++ b/home.html
@@ -6,11 +6,80 @@
   <title>Home - Jayvee Hall of Mansion</title>
   <link rel="stylesheet" href="style.css">
   <script defer src="script.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f2f2f2;
+      padding: 20px;
+    }
+    .home-container {
+      text-align: center;
+      margin: auto;
+      max-width: 1100px;
+    }
+    .room-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      margin-top: 20px;
+    }
+    .room-card {
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      padding: 10px;
+      text-align: center;
+      transition: 0.3s;
+    }
+    .room-card img {
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+      border-radius: 10px;
+    }
+    .room-card:hover {
+      transform: scale(1.02);
+    }
+    .card-buttons button {
+      margin: 5px;
+      padding: 8px 12px;
+      border: none;
+      cursor: pointer;
+      border-radius: 5px;
+      background: #333;
+      color: white;
+      font-size: 14px;
+    }
+    .card-buttons button:hover {
+      background: #555;
+    }
+    /* Modal */
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.5);
+      justify-content: center;
+      align-items: center;
+    }
+    .modal-content {
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+      width: 400px;
+      max-width: 90%;
+      text-align: center;
+    }
+    .close {
+      position: absolute;
+      top: 10px; right: 15px;
+      font-size: 22px;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
-
-  <!-- HEADER / NAVBAR -->
-  
 
   <!-- HOME CONTENT -->
   <div class="home-container fade-in">
@@ -21,41 +90,41 @@
     <div class="room-grid">
       <div class="room-card">
         <img src="assets/room1.jpg" alt="Deluxe Room">
-        <h3>Deluxe Room</h3>
+        <h3>Room 101 - Deluxe Room</h3>
         <p>₱3,500 / night</p>
         <div class="card-buttons">
           <button onclick="showRoomDetails(0)">View Details</button>
-          <button onclick="window.location.href='booking.html'">Book Now</button>
+          <button onclick="bookRoom('Room 101 - Deluxe Room')">Book Now</button>
         </div>
       </div>
 
       <div class="room-card">
         <img src="assets/room2.jpg" alt="Executive Suite">
-        <h3>Executive Suite</h3>
+        <h3>Room 102 - Executive Suite</h3>
         <p>₱5,200 / night</p>
         <div class="card-buttons">
           <button onclick="showRoomDetails(1)">View Details</button>
-          <button onclick="window.location.href='booking.html'">Book Now</button>
+          <button onclick="bookRoom('Room 102 - Executive Suite')">Book Now</button>
         </div>
       </div>
 
       <div class="room-card">
         <img src="assets/room3.jpg" alt="Family Room">
-        <h3>Family Room</h3>
+        <h3>Room 103 - Family Room</h3>
         <p>₱4,000 / night</p>
         <div class="card-buttons">
           <button onclick="showRoomDetails(2)">View Details</button>
-          <button onclick="window.location.href='booking.html'">Book Now</button>
+          <button onclick="bookRoom('Room 103 - Family Room')">Book Now</button>
         </div>
       </div>
 
       <div class="room-card">
         <img src="assets/room4.jpg" alt="Presidential Suite">
-        <h3>Presidential Suite</h3>
+        <h3>Room 104 - Presidential Suite</h3>
         <p>₱8,000 / night</p>
         <div class="card-buttons">
           <button onclick="showRoomDetails(3)">View Details</button>
-          <button onclick="window.location.href='booking.html'">Book Now</button>
+          <button onclick="bookRoom('Room 104 - Presidential Suite')">Book Now</button>
         </div>
       </div>
     </div>
@@ -68,10 +137,41 @@
       <h3 id="roomTitle"></h3>
       <p id="roomDesc"></p>
       <p id="roomPrice"></p>
-      <button onclick="window.location.href='booking.html'">Interested</button>
+      <button onclick="proceedToBooking()">Interested</button>
       <button onclick="closeRoomModal()">Not Interested</button>
     </div>
   </div>
 
+<script>
+  const roomDetails = [
+    { title: "Room 101 - Deluxe Room", desc: "Our Deluxe Room offers comfort and elegance with a cozy king-size bed, complimentary Wi-Fi, and a modern bathroom. Perfect for solo travelers or couples.", price: "₱3,500 / night" },
+    { title: "Room 102 - Executive Suite", desc: "Executive Suite provides a luxurious experience with spacious interiors, a private lounge area, and premium amenities for your relaxing stay.", price: "₱5,200 / night" },
+    { title: "Room 103 - Family Room", desc: "Family Room is designed for groups and families, featuring multiple beds, entertainment options, and ample space for a comfortable stay.", price: "₱4,000 / night" },
+    { title: "Room 104 - Presidential Suite", desc: "The Presidential Suite is our finest offering with a majestic view, large living room, Jacuzzi, and VIP services for a lavish stay.", price: "₱8,000 / night" }
+  ];
+
+  let selectedRoom = "";
+
+  function showRoomDetails(index) {
+    selectedRoom = roomDetails[index].title;
+    document.getElementById("roomTitle").innerText = roomDetails[index].title;
+    document.getElementById("roomDesc").innerText = roomDetails[index].desc;
+    document.getElementById("roomPrice").innerText = roomDetails[index].price;
+    document.getElementById("roomModal").style.display = "flex";
+  }
+
+  function closeRoomModal() {
+    document.getElementById("roomModal").style.display = "none";
+  }
+
+  function proceedToBooking() {
+    window.location.href = `booking.html?room=${encodeURIComponent(selectedRoom)}`;
+  }
+
+  function bookRoom(roomName) {
+    window.location.href = `booking.html?room=${encodeURIComponent(roomName)}`;
+  }
+</script>
+
 </body>
-  </html>
+    </html>
