--- a/admin.html
+++ b/admin.html
@@ -113,6 +113,7 @@
     <table>
       <thead>
         <tr>
+          <th>Image</th>
           <th>Username</th>
           <th>Email</th>
           <th>Age</th>
