--- a/admin.html
+++ b/admin.html
@@ -93,6 +93,9 @@
       from {opacity: 0;}
       to {opacity: 1;}
     }
+    img {
+      border-radius: 50%;
+    }
   </style>
 </head>
 <body>
@@ -113,11 +116,14 @@
     <table>
       <thead>
         <tr>
-          <th>Image</th>
+          <th>Photo</th>
+          <th>Full Name</th>
           <th>Username</th>
           <th>Email</th>
-          <th>Age</th>
           <th>Contact</th>
+          <th>Status</th>
+          <th>Birthdate</th>
+          <th>Age</th>
           <th>Address</th>
           <th>Actions</th>
         </tr>
@@ -136,10 +142,11 @@
       <thead>
         <tr>
           <th>#</th>
-          <th>Room</th>
           <th>Name</th>
-          <th>Guests</th>
-          <th>Date of Stay</th>
+          <th>Room</th>
+          <th>Room No.</th>
+          <th>People</th>
+          <th>Date</th>
           <th>Days</th>
           <th>Payment Method</th>
           <th>Bank</th>
@@ -163,20 +170,33 @@
     let users = JSON.parse(localStorage.getItem("users")) || [];
     let bookings = JSON.parse(localStorage.getItem("bookings")) || [];
 
+    // Remove duplicate users (by username)
+    users = Array.from(new Map(users.map(u => [u.username, u])).values());
+    localStorage.setItem("users", JSON.stringify(users));
+
+    // Remove duplicate bookings (by name+date+roomNo)
+    bookings = Array.from(new Map(bookings.map(b => [b.name + b.date + b.roomNo, b])).values());
+    localStorage.setItem("bookings", JSON.stringify(bookings));
+
     // Render Users
     function renderUsers() {
       usersTable.innerHTML = "";
       if (users.length === 0) {
-        usersTable.innerHTML = `<tr><td colspan="6">No registered users yet.</td></tr>`;
+        usersTable.innerHTML = `<tr><td colspan="10" class="no-data">No registered users yet.</td></tr>`;
       } else {
         users.forEach((u, index) => {
+          const fullName = `${u.firstName || ''} ${u.middleName || ''} ${u.lastName || ''} ${u.suffix || ''}`;
           usersTable.innerHTML += `
             <tr>
+              <td><img src="${u.photo || 'assets/default.png'}" width="50"></td>
+              <td>${fullName}</td>
               <td>${u.username}</td>
               <td>${u.email}</td>
-              <td>${u.age}</td>
               <td>${u.contact}</td>
-              <td>${u.address}</td>
+              <td>${u.status || '-'}</td>
+              <td>${u.birthdate || '-'}</td>
+              <td>${u.age || '-'}</td>
+              <td>${u.address || '-'}</td>
               <td><button class="delete-btn" onclick="deleteUser(${index})">Delete</button></td>
             </tr>
           `;
@@ -188,24 +208,25 @@
     function renderBookings() {
       bookingsTable.innerHTML = "";
       if (bookings.length === 0) {
-        bookingsTable.innerHTML = `<tr><td colspan="10" class="no-data">No bookings yet.</td></tr>`;
+        bookingsTable.innerHTML = `<tr><td colspan="11" class="no-data">No bookings yet.</td></tr>`;
         return;
       }
       bookings.forEach((b, index) => {
-        const row = document.createElement("tr");
-        row.innerHTML = `
-          <td>${index + 1}</td>
-          <td>${b.roomName || "-"}</td>
-          <td>${b.fullName || b.name}</td>
-          <td>${b.numPeople || b.people}</td>
-          <td>${b.dateStay || b.date}</td>
-          <td>${b.numDays || b.days}</td>
-          <td>${b.paymentMethod || b.payment}</td>
-          <td>${b.bank || "-"}</td>
-          <td>${b.timestamp || "-"}</td>
-          <td><button class="delete-btn" onclick="deleteBooking(${index})">Delete</button></td>
+        bookingsTable.innerHTML += `
+          <tr>
+            <td>${index + 1}</td>
+            <td>${b.name}</td>
+            <td>${b.room || '-'}</td>
+            <td>${b.roomNo || '-'}</td>
+            <td>${b.people || b.numPeople || '-'}</td>
+            <td>${b.date || b.dateStay || '-'}</td>
+            <td>${b.days || b.numDays || '-'}</td>
+            <td>${b.payment || b.paymentMethod || '-'}</td>
+            <td>${b.bank || '-'}</td>
+            <td>${b.timestamp || '-'}</td>
+            <td><button class="delete-btn" onclick="deleteBooking(${index})">Delete</button></td>
+          </tr>
         `;
-        bookingsTable.appendChild(row);
       });
     }
 
@@ -243,7 +264,7 @@
       } else {
         let y = 40;
         bookings.forEach((b, index) => {
-          const info = `${index + 1}. ${b.fullName || b.name} | People: ${b.numPeople || b.people} | Date: ${b.dateStay || b.date} | Days: ${b.numDays || b.days} | Payment: ${b.paymentMethod || b.payment}`;
+          const info = `${index + 1}. ${b.name} | People: ${b.people || b.numPeople} | Date: ${b.date || b.dateStay} | Days: ${b.days || b.numDays} | Payment: ${b.payment || b.paymentMethod}`;
           doc.text(info, 14, y);
           y += 10;
           if (y > 180) {
@@ -261,9 +282,9 @@
         alert("No data to export.");
         return;
       }
-      let csv = "No,Room,Name,Guests,Date of Stay,Days,Payment,Bank,Timestamp\n";
+      let csv = "No,Name,Room,Room No.,People,Date,Days,Payment,Bank,Timestamp\n";
       bookings.forEach((b, i) => {
-        csv += `${i+1},${b.roomName || "-"},${b.fullName || b.name},${b.numPeople || b.people},${b.dateStay || b.date},${b.numDays || b.days},${b.paymentMethod || b.payment},${b.bank || "-"},${b.timestamp || "-"}\n`;
+        csv += `${i+1},${b.name},${b.room || "-"},${b.roomNo || "-"},${b.people || b.numPeople || "-"},${b.date || b.dateStay || "-"},${b.days || b.numDays || "-"},${b.payment || b.paymentMethod || "-"},${b.bank || "-"},${b.timestamp || "-"}\n`;
       });
 
       const blob = new Blob([csv], { type: "text/csv" });
